--- a/addressing/Makefile
+++ b/addressing/Makefile
@@ -1,24 +1,10 @@
-target	 = printf_params
+target	 = addressing
 
 sources  = $(target:=.s) # add here all the sources
 listings = $(sources:.s=.lst)
 objects  = $(sources:.s=.o)
 
 all:	$(target)
-
-#------------------------------------
-# eXtra stuff for this project only
-#
-extra:  printf_params.c.elf
-
-printf_params.c.elf: printf_params.c
-		gcc -S -fverbose-asm -O0 -o $(<:=.assembly) $<
-		gcc -o $@ $<
-
-xclean:
-		@echo "eXtra clean ..."
-		rm -vf *.elf *.assembly
-#------------------------------------
 
 # $@ - is the target
 # $+ - is the dependencies list (or $^)
@@ -32,7 +18,7 @@ ${target}:	$(objects)
 		@echo "build the dependency: $< ..."
 		as -a=$(@:.o=.lst) -o $@ $<
 
-clean:  xclean
+clean:
 		@echo "cleaning up ..."
 		rm -vf $(listings) ${objects} ${target}
 
