add the bubble sort to git

--- a/sortings/Makefile
+++ b/sortings/Makefile
@@ -1,18 +1,27 @@
 target	 = selection-sort
+target2  = bubble-sort
 
 sources  = $(target:=.s) # add here all the sources
 listings = $(sources:.s=.lst)
 objects  = $(sources:.s=.o)
 
+sources2  = $(target2:=.s) # add here all the sources
+listings2 = $(sources2:.s=.lst)
+objects2  = $(sources2:.s=.o)
 
-all:	$(target) extra
+
+all:	$(target) $(target2) extra
 
 #------------------------------------
 # eXtra stuff for this project only
 #
-extra:  selection-sort.c.exe
+extra:  selection-sort.c.exe bubble-sort.c.exe
 
 selection-sort.c.exe: selection-sort.c
+		gcc -S -fverbose-asm -O0 -o $(<:=.assembly) $<
+		gcc -o $@ $<
+
+bubble-sort.c.exe: bubble-sort.c
 		gcc -S -fverbose-asm -O0 -o $(<:=.assembly) $<
 		gcc -o $@ $<
 
@@ -29,11 +38,16 @@ ${target}:	$(objects)
 		@echo "build the target: $@ ..."
 		gcc -o $@ $+
 
+${target2}:	$(objects2)
+		@echo "build the target: $@ ..."
+		gcc -o $@ $+
+
 %.o:	%.s
 		@echo "build the dependency: $< ..."
 		as -a=$(@:.o=.lst) -o $@ $<
 
 clean:  xclean
 		@echo "cleaning up ..."
-		rm -vf	$(listings) ${objects} ${target}
+		rm -vf	$(listings) ${objects} ${target} \
+				$(listings2) ${objects2} ${target2}
 
