finalize the building of the library structure.

--- a/libs/sorting/Makefile
+++ b/libs/sorting/Makefile
@@ -3,13 +3,10 @@ bindir = ../bin
 libdir = ../lib
 
 library	 = lh-sorting.a
-sources	 = bubble-sort.s
+sources	 = bubble-sort.s selection-sort.s
 
-# listings = $(sources:.s=.lst)
-# objects  = $(sources:.s=.o)
 objects  := $(patsubst %.s,$(objdir)/%.o,$(sources))
 listings := $(patsubst %.s,$(objdir)/%.lst,$(sources))
-
 
 all:	$(library)
 		@echo "build the library $<"
@@ -17,7 +14,7 @@ all:	$(library)
 $(library):	$(objects)
 		mkdir -p $(libdir)
 		@echo "building the library $@ from $(objects)"
-		ar rcs $(libdir)/$@ $<
+		ar rcs $(libdir)/$@ $(objects)
 
 $(objdir)/%.o:	%.s
 		mkdir -p $(objdir)
