add a  new function to the vector library and commit the fixes to the existing functions and functional testing of the library

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,11 +1,14 @@
 all:
 		cd sorting; make all
+		cd vector; make all
 		cd io; make all
 		cd tests; make all
 clean:
 		cd sorting; make clean
 		cd io; make clean
 		cd tests; make clean
+		cd vector; make clean
+		
 
 
 
