--- a/libs/tests/Makefile
+++ b/libs/tests/Makefile
@@ -12,7 +12,12 @@ sources2 = $(target2:=.s) # add here all the sources
 objects2 := $(patsubst %.s,$(objdir)/%.o,$(sources2))
 listings2 := $(patsubst %.s,$(objdir)/%.lst,$(sources2))
 
-all:	$(target1) $(target2)
+target3 = test-vector-reverse
+sources3 = $(target3:=.s) # add here all the sources
+objects3 := $(patsubst %.s,$(objdir)/%.o,$(sources3))
+listings3 := $(patsubst %.s,$(objdir)/%.lst,$(sources3))
+
+all:	$(target1) $(target2) $(target3)
 
 # $@ - is the target
 # $+ - is the dependencies list (or $^)
@@ -28,6 +33,11 @@ $(target2):	$(objects2)
 		mkdir -p $(bindir)
 		@echo "build the target: $@ ..."
 		gcc -o $(bindir)/$@ $+ $(libdir)/lh-sorting.a $(libdir)/lh-io.a
+
+$(target3):	$(objects3)
+		mkdir -p $(bindir)
+		@echo "build the target: $@ ..."
+		gcc -o $(bindir)/$@ $+ $(libdir)/lh-io.a $(libdir)/lh-vector.a
 
 $(objdir)/%.o:	%.s
 		mkdir -p $(objdir)
