add the function to search a subvector in a vector and also the associated test

--- a/libs/tests/Makefile
+++ b/libs/tests/Makefile
@@ -37,8 +37,13 @@ sources7 = $(target7:=.s) # add here all the sources
 objects7 := $(patsubst %.s,$(objdir)/%.o,$(sources7))
 listings7 := $(patsubst %.s,$(objdir)/%.lst,$(sources7))
 
+target8 = test-vector-subvector
+sources8 = $(target8:=.s) # add here all the sources
+objects8 := $(patsubst %.s,$(objdir)/%.o,$(sources8))
+listings8 := $(patsubst %.s,$(objdir)/%.lst,$(sources8))
+
 all:	$(target1) $(target2) $(target3) $(target4) $(target5) \
-		$(target6) $(target7)
+		$(target6) $(target7) $(target8)
 
 # $@ - is the target
 # $+ - is the dependencies list (or $^)
@@ -76,6 +81,11 @@ $(target6):	$(objects6)
 		gcc -o $(bindir)/$@ $+ $(libdir)/lh-vector.a $(libdir)/lh-io.a
 
 $(target7):	$(objects7)
+		mkdir -p $(bindir)
+		@echo "build the target: $@ ..."
+		gcc -o $(bindir)/$@ $+ $(libdir)/lh-vector.a $(libdir)/lh-io.a
+
+$(target8):	$(objects8)
 		mkdir -p $(bindir)
 		@echo "build the target: $@ ..."
 		gcc -o $(bindir)/$@ $+ $(libdir)/lh-vector.a $(libdir)/lh-io.a
