--- a/libs/tests/Makefile
+++ b/libs/tests/Makefile
@@ -47,8 +47,13 @@ sources9 = $(target9:=.s) # add here all the sources
 objects9 := $(patsubst %.s,$(objdir)/%.o,$(sources9))
 listings9 := $(patsubst %.s,$(objdir)/%.lst,$(sources9))
 
+target10 = test-vector-average
+sources10 = $(target10:=.s) # add here all the sources
+objects10 := $(patsubst %.s,$(objdir)/%.o,$(sources10))
+listings10 := $(patsubst %.s,$(objdir)/%.lst,$(sources10))
+
 all:	$(target1) $(target2) $(target3) $(target4) $(target5) \
-		$(target6) $(target7) $(target8) $(target9)
+		$(target6) $(target7) $(target8) $(target9) $(target10)
 
 # $@ - is the target
 # $+ - is the dependencies list (or $^)
@@ -96,6 +101,11 @@ $(target8):	$(objects8)
 		gcc -o $(bindir)/$@ $+ $(libdir)/lh-vector.a $(libdir)/lh-io.a
 
 $(target9):	$(objects9)
+		mkdir -p $(bindir)
+		@echo "build the target: $@ ..."
+		gcc -o $(bindir)/$@ $+ $(libdir)/lh-vector.a $(libdir)/lh-io.a
+
+$(target10): $(objects10)
 		mkdir -p $(bindir)
 		@echo "build the target: $@ ..."
 		gcc -o $(bindir)/$@ $+ $(libdir)/lh-vector.a $(libdir)/lh-io.a
